<resources>
    <string name="app_name">Things ToDo</string>
    <string name="create_profile_to">Create Profile to</string>
    <string name="start_your_first">Start your first</string>
    <string name="your_name">your name</string>
    <string name="password">Password</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="dont_have_an_account">"Don't have an account"</string>
    <string name="log_in">Log In</string>
    <string name="Wel_come_back">Welcome back</string>
    <string name="forget_your_password">Forget yout password ?</string>
    <string name="search">Searck</string>
    <string name="lists">"Lists : "</string>
    <string name="categories">"Categories : "</string>
    <string name="create_new_category_here">Create new Category here</string>
    <string name="create_new_list_here">Create new List here</string>
    <string name="task">Task</string>
    <string name="delete">Delete</string>
    <string name="create_new_task_here">Create new task here</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="Descrption">Descrption</string>
    <string name="Create">Create</string>
    <string name="save">Save</string>
    <string name="filed_required">filed required</string>
    <string name="invalid_Email_address">invalid Email address</string>
    <string name="mail_exists">"This mail exists "</string>
    <string name="mail_not_exists">Email Not Exists</string>
    <string name="error">Error</string>
    <string name="ok">×ن</string>
    <string name="confirm">Confirm</string>
    <string name="close">close</string>
    <string name="cancel">Cancel</string>
    <string name="Title">Title</string>
    <string name="Enter_Title">Enter Title</string>
    <string name="Color">Color</string>
    <string name="required_field">required_field</string>
    <string name="create_new_list">Create New List</string>
    <string name="Cateogry_exists">This Category Name Exists</string>
    <string name="Enter_Description">Enter Description</string>
</resources>