<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:background="@drawable/shape_card"
    android:backgroundTint="@color/white"
    tools:ignore="MissingDefaultResource">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    style="@style/TextViewPrimary"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="16dp"
                    android:text="@string/create_new_list" />



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Title"
                        android:layout_marginStart="8dp" />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="16dp"
                    android:inputType="text"
                    android:lines="1"
                    android:theme="@style/editTextWhiteStyle"
                    android:gravity="start"
                    android:hint="@string/Enter_Title"
                    android:padding="8dp"
                    android:textSize="14sp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Descrption"
                        android:layout_marginStart="8dp" />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_dialog_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="16dp"
                    android:inputType="text"
                    android:lines="1"
                    android:theme="@style/editTextWhiteStyle"
                    android:gravity="start"
                    android:hint="@string/Enter_Description"
                    android:padding="8dp"
                    android:textSize="14sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:layout_marginTop="4dp"
                        android:id="@+id/close_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="@style/ButtomStyle"
                        android:text="@string/Create"
                        android:layout_margin="24dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>