<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".Ui.Activities.HomeActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edittext_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_search_24"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:hint="@string/search"
                    android:theme="@style/editTextStyle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="start"
                    android:text="@string/lists"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:theme="@style/TextViewPrimary" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_add_new_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="0dp"
                    android:drawableStart="@drawable/ic_baseline_add_24"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:text="@string/create_new_list_here"
                    android:theme="@style/editTextStyle"
                    android:textColor="@color/white"
                    android:background="@drawable/shape_edittext"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>